--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,10 @@ button:hover {
   transition: all 0.2s ease-in;
 }
 
+.nav-bar__link:hover{
+  color: #f69615;
+}
+
 .sitebranding {
   width: 100%;
   height: 860px;
@@ -111,6 +115,32 @@ button:hover {
   font-size: 24px;
 
   text-align: center;
+}
+
+.sitebranding__text:before {
+  content: "";
+
+  display: block;
+  position: relative;
+  
+  height: 2px;
+  width: 200px;
+  background: #ffffff;
+  right: 75%;
+  top: 45%;
+}
+
+.sitebranding__text::after {
+  content: "";
+
+  display: block;
+  position: relative;
+  
+  height: 2px;
+  width: 200px;
+  background: #ffffff;
+  left: 125%;
+  bottom: 50%;
 }
 
 .sitebranding__button-block {
@@ -347,3 +377,147 @@ button:hover {
   position: relative;
 }
 
+.client-block__name:before {
+  content: "";
+
+  display: block;
+  position: relative;
+  
+  height: 4px;
+  width: 75px;
+  background: #f69615;
+  right: 55%;
+  top: 50%;
+}
+
+.client-block__name:after {
+  content: "";
+
+  display: block;
+  position: relative;
+  
+  height: 4px;
+  width: 75px;
+  background: #f69615;
+  left: 110%;
+  bottom: 45%;
+}
+
+.contact {
+  width: 100%;
+  height: 380px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  background-image: url(/img/contacts-bg.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+
+  font-family: "Roboto", sans-serif;
+}
+
+.contact__title h2 {
+  padding: 75px 0 25px 0;
+
+  color: #ffffff;
+}
+
+.contact__text p {
+  padding: 0 0 25px 0;
+
+  color: #ffffff;
+}
+
+.contact__form {
+  padding: 80px 0 0 0;
+
+  width: 65%;
+
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+input {
+  padding: 0 10px;
+
+  width: 200px;
+  height: 40px;
+
+  border: 1px solid #d9d9d9;
+  border-radius: 4px;
+}
+
+/* placeholder anim */
+
+input::-webkit-input-placeholder {
+  text-indent: 0px;
+  transition: text-indent 0.3s ease;
+}
+input::-moz-placeholder {
+  text-indent: 0px;
+  transition: text-indent 0.3s ease;
+}
+input:-moz-placeholder {
+  text-indent: 0px;
+  transition: text-indent 0.3s ease;
+}
+input:-ms-input-placeholder {
+  text-indent: 0px;
+  transition: text-indent 0.3s ease;
+}
+input:focus::-webkit-input-placeholder {
+  text-indent: 200px;
+  transition: text-indent 0.3s ease;
+}
+input:focus::-moz-placeholder {
+  text-indent: 200px;
+  transition: text-indent 0.3s ease;
+}
+input:focus:-moz-placeholder {
+  text-indent: 200px;
+  transition: text-indent 0.3s ease;
+}
+input:focus:-ms-input-placeholder {
+  text-indent: 200px;
+  transition: text-indent 0.3s ease;
+}
+
+.contact__form button {
+  width: 202px;
+  height: 42px;
+
+  border-radius: 4px;
+}
+
+footer {
+  width: 100%;
+  height: 150px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__nav-bar {
+  padding: 45px 0 25px 0;
+}
+
+.footer__links {
+  width: 125px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.footer__links{
+  transition: all 0.2s ease-in;
+}
+
+.footer-link:hover{
+  transform: scale(1.05);
+  transition: all 0.2s ease-in;
+}
