--- a/css/style.css
+++ b/css/style.css
@@ -31,13 +31,38 @@ button:hover {
   color: #585858;
 }
 
-.header {
+#header {
   width: 100%;
   height: 300px;
 
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.scrolling-header {
+  width: 100%;
+  height: 90px;
+
+  background-color: #ffffff;
+  position: fixed;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 2;
+  opacity: 0;
+
+  transition: all 0.1s ease-in;
+
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
+  box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.5);
+}
+
+.scrolling-header-visible {
+  opacity: 1;
+  transition: all 0.2s ease-in;
 }
 
 .header__logo {
@@ -78,7 +103,7 @@ button:hover {
   transition: all 0.2s ease-in;
 }
 
-.nav-bar__link:hover{
+.nav-bar__link:hover {
   color: #f69615;
 }
 
@@ -122,7 +147,7 @@ button:hover {
 
   display: block;
   position: relative;
-  
+
   height: 2px;
   width: 200px;
   background: #ffffff;
@@ -135,7 +160,7 @@ button:hover {
 
   display: block;
   position: relative;
-  
+
   height: 2px;
   width: 200px;
   background: #ffffff;
@@ -212,10 +237,6 @@ button:hover {
   background-repeat: no-repeat;
 
   transition: all 0.2s ease-in;
-}
-
-.skill:hover {
-  transform: scale(1.02);
 }
 
 .skill__title h3 {
@@ -382,7 +403,7 @@ button:hover {
 
   display: block;
   position: relative;
-  
+
   height: 4px;
   width: 75px;
   background: #f69615;
@@ -395,7 +416,7 @@ button:hover {
 
   display: block;
   position: relative;
-  
+
   height: 4px;
   width: 75px;
   background: #f69615;
@@ -492,6 +513,13 @@ input:focus:-ms-input-placeholder {
   border-radius: 4px;
 }
 
+.up-button{
+  position: fixed;
+
+  right: 215px;
+  bottom: 50px;
+}
+
 footer {
   width: 100%;
   height: 150px;
@@ -513,11 +541,11 @@ footer {
   justify-content: space-between;
 }
 
-.footer__links{
+.footer__links {
   transition: all 0.2s ease-in;
 }
 
-.footer-link:hover{
+.footer-link:hover {
   transform: scale(1.05);
   transition: all 0.2s ease-in;
 }
